@@ -110,6 +110,7 @@ extern double logb(double);
 
 static void LoadGmin (SMPmatrix *eMatrix, double Gmin) ;
 
+
 /* Correction for the Spertica's hack */
 void
 SMPgmo (SMPmatrix *Matrix, int PrintReordered, double *gsl_matrix_out)
