@@ -91,7 +91,7 @@ int sens_sens(CKTcircuit *ckt, int restart)
 			*saved_irhs = 0;
 	MatrixFrame	*saved_matrix = 0;
 
-        delta_Y = TMALLOC(SMPmatrix, 1);
+delta_Y = (SMPmatrix *) TMALLOC (SMPmatrix, 1) ;
 
 #ifndef notdef
 #ifdef notdef
